--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.3'
+    implementation 'com.github.jd-alexander:library:1.1.0'
+    implementation 'com.github.thomper:sweet-alert-dialog:v1.4.0'
+
 
 }
 
